New HnS roles: Jumper, Detector, Jet, Dasher, Locator, Venter

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3497,10 +3497,11 @@
   "DetectorFrequency": "Info about Seekers appears every",
   "DetectorVision": "Detector Vision",
   "DetectorSpeed": "Detector Speed",
+  "DetectorNotify": "A Seeker is in <#00ffa5>{0}</color>",
   "Jet": "JET",
   "JetInfo": "PET TO BECOME FAST AND ESCAPE FROM SEEKERS",
   "JetInfoLong": "PET TO BECOME FAST AND ESCAPE FROM SEEKERS",
-  "JetSpeed": "Jet Speed",
+  "JetSpeedIncreased": "Jet Increased Speed",
   "JetDuration": "Jet Duration",
   "JetCooldown": "Jet Cooldown",
   "JetVision": "Jet Vision",
@@ -3508,7 +3509,7 @@
   "Dasher": "DASHER",
   "DasherInfo": "PET TO BECOME FAST AND CATCH HIDERS",
   "DasherInfoLong": "PET TO BECOME FAST AND CATCH HIDERS",
-  "DasherSpeed": "Dasher Speed",
+  "DasherSpeedIncreased": "Dasher Increased Speed",
   "DasherDuration": "Dasher Duration",
   "DasherCooldown": "Dasher Cooldown",
   "DasherVision": "Dasher Vision",
@@ -3517,10 +3518,11 @@
   "LocatorInfo": "YOU GET CLUES TO FIND HIDERS",
   "LocatorInfoLong": "YOU GET CLUES TO FIND HIDERS",
   "LocatorDuration": "Locator Arrow Duration",
-  "LocatorCooldown": "Locator Arrow Cooldown",
+  "LocatorFrequency": "Locator Arrow Frequency",
   "LocatorTargetKnows": "Hiders know when they are located",
   "LocatorVision": "Locator Vision",
   "LocatorSpeed": "Locator Speed",
+  "LocatorNotify": "A Locator is currently tracking you",
   "Venter": "VENTER",
   "VenterInfo": "USE VENTS TO CATCH HIDERS",
   "VenterInfoLong": "USE VENTS TO CATCH HIDERS",
@@ -3537,6 +3539,10 @@
   "TaskinatorCanWinAfterDeath": "Taskinator Can Win After Death",
   "TaskinatorVision": "Taskinator Vision",
   "TaskinatorSpeed": "Taskinator Speed",
+  "PlayerAlreadyMod": "This player is already a moderator, nothing was changed.",
+  "PlayerAddedToModList": "Player successfully added to the moderator list.",
+  "PlayerRemovedFromModList": "Player successfully removed from the moderator list.",
+  "PlayerNotMod": "This player is not a moderator, nothing was changed.",
   "Goose": "Goose",
   "GooseInfo": "Honk at players to annoy them",
   "GooseInfoLong": "(Crewmates):\\nAs the Goose, you can honk at players to annoy them.\\nYou can drag them around and make them unable to use their abilities while you're honking at them.",
