GetSuffix override, Fix & Finish HnS, New HnS roles: Agent, Taskinator, Bug fixes, Colored player & role name for host with /death, /d is an alternative to /death

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3470,6 +3470,7 @@
   "SeekerSpeed": "Seeker Speed",
   "HiderSpeed": "Hider Speed",
   "SeekerCanVent": "Seeker Can Vent",
+  "BlindTime": "Blind Time",
   "Hider": "HIDER",
   "HiderInfo": "COMPLETE TASKS TO WIN",
   "HiderInfoLong": "COMPLETE TASKS TO WIN",
