Translating & Improving Translation

--- a/Resources/Lang/ru_RU.json
+++ b/Resources/Lang/ru_RU.json
@@ -27,8 +27,8 @@
   "ImpostorSub": "Убивайте и саботируйте",
   "NeutralSub": "Играйте в одиночку, чтобы добиться победы",
   "MadmateSub": "Помогите <color=#ff1919>Предателям</color> победить",
-  "KB_Normal": "Тестер",
-  "KB_NormalInfo": "Убейте их всех!",
+  "KB_Normal": "Челленджер",
+  "KB_NormalInfo": "Убей их всех!",
   "Role.Crewmate": "<color=#8cffff>Crewmate</color>",
   "Role.Jester": "<color=#ec62a5>Jester</color>",
   "Role.Opportunist": "<color=#4dff4d>Opportunist</color>",
@@ -392,7 +392,7 @@
   "ShapeMasterInfo": "Убивай незаметно, без отката на морф",
   "VampireInfo": "Укус убивает не сразу...",
   "WarlockInfo": "Проклинай игроков и убивай с их помощью",
-  "AssassinInfo": "Выбери цель, затем морфнись, чтобы убить её",
+  "AssassinInfo": "Выбери цель, затем морфнись/погладь пета, чтобы убить её",
   "ZombieInfo": "Ты медленный, зато бессмертный",
   "HackerInfo": "Заставь игроков зарепортить воздух!",
   "MinerInfo": "Телепортируйся на люки, которыми ты пользовался в последний раз",
@@ -453,7 +453,7 @@
   "DemolitionistInfo": "У твоего убийцы мало времени...",
   "TaskManagerInfo": "Ты знаешь, сколько тасков выполнено",
   "NiceEraserInfo": "Стирай роли <color=#ff1919>злых</color> игроков",
-  "MayorInfo": "Твой голос считается, как несколько",
+  "MayorInfo": "Твой голос считается как несколько",
   "ParanoiaInfo": "У тебя есть портативная кнопка собрания",
   "PsychicInfo": "Один из игроков с красным именем - <color=#ff1919>злой</color>",
   "SabotageMasterInfo": "Ты можешь использовать люки и быстро чинить саботажи",
@@ -3012,7 +3012,7 @@
   "NiceHackerModdedClientCanMoveWhileViewingMap": "Клиенты с модом могут двигаться, смотря на карту",
   "NiceHackerVanillaClientSeesInfoFor": "Ванильные клиенты могут видеть информацию о комнатах в течение",
   "NiceHackerAbilitySecondsLeft": "Способностей осталось (в секундах)",
-  "AbilityChargesWhenFinishedTasks": "<color=#00ffff>Кол-во <color=#7FFFD2>способностей, дающихся </color> <color=#ffa500>каждые 5 секунд</color>, когда все таски сделаны</color>",
+  "AbilityChargesWhenFinishedTasks": "<color=#00ffff>Кол-во <color=#7FFFD2>способностей, дающихся </color><color=#ffa500>каждые 5с</color>, когда все таски сделаны</color>",
   "Vengeance": "Vengeance",
   "VengeanceInfo": "Убей своего убийцу, чтобы выжить",
   "VengeanceInfoLong": "(Нейтральный Убийца):\\nКогда кто-то пытается убить Vengeance, убийства не произойдёт и Vengeance телепортируется в случайную точку на карте. У него будет немного времени на убийство того, кто попытался его убить. Если Vengeance успешно отомстит, то останется жив. Если же таймер истечёт или Vengeance попытается убить кого-то кроме своего убийцы, Vengeance умрёт.",
@@ -3337,11 +3337,11 @@
   "ChangelingInfo": "Выбери себе роль сам!",
   "ChangelingInfoLong": "(Предатель):\\nChangeling может выбрать себе роль самостоятельно. Чтобы сделать это, ему нужно сначала выбрать себе подходящую роль, которая будет отображаться у него под никнеймом (чтобы переключаться между выбранной ролью нужно прыгнуть в люк/погладить питомца). Когда Changeling найдёт в списке подходящую роль, ему нужно будет морфнуться. После этого он станет этой ролью до конца игры.\\n\\nВ зависимости от настроек, до выбора роли нельзя убивать, выбирать можно только определённые роли или нельзя выбрать роль, которая есть у партнёра.\\n\\nПримечание: если выбрана роль, которая базируется на роли Impostor, то кнопка морфа не пропадёт, но её откат будет составлять 300 секунд, а длительность морфа - 1 секунда.",
   "CL.All": "Все",
-  "CL.AllImp": "Все, осн. на Impostor",
-  "CL.AllSS": "Все, осн. на Shapeshifter",
+  "CL.AllImp": "Все Imp-осн.",
+  "CL.AllSS": "Все Shapeshifter-осн.",
   "CL.Enabled": "Включённые",
-  "CL.EnabledImp": "Вкл, осн. на Impostor",
-  "CL.EnabledSS": "Вкл, осн. на Shapeshifter",
+  "CL.EnabledImp": "Вкл Imp-осн.",
+  "CL.EnabledSS": "Вкл Shapeshifter-осн.",
   "CanPickPartnerRole": "Может стать ролью, которая есть у тиммейта",
   "CanKillBeforeRoleChange": "Может убивать до выбора роли",
   "AvailableRoles": "Доступные для становления роли:",
@@ -3453,11 +3453,11 @@
   "Potato": "Игрок",
   "PotatoInfo": "БЕГИ ОТ ИГРОКОВ С КАРТОШКОЙ",
   "PotatoInfoLong": "БЕГИ ОТ ИГРОКОВ С КАРТОШКОЙ",
-  "HideAndSeek": "HIDE AND SEEK",
+  "HideAndSeek": "ПРЯТКИ",
   "ModeHideAndSeek": "Режим: Прятки",
   "ModeDescribe.HideAndSeek": "В режиме ''Прятки'' один или несколько из игроков - искатели, а другие - прячущиеся.\\nКогда таймер дойдёт до 0, прячущиеся выиграют. Чтобы приблизить конец игры, прячущиеся должны выполнять таски\\n\\n<b><u>Дополнительные роли:</u></b>\\n\\n<#00ff00><b>Fox</b></color>:\\n<size=70%>Побеждает, если доживёт до конца.</size>\\n\\n<#ff00ff><b>Troll</b></color>:\\n<size=70%>Побеждает, если умрёт. Искатели и прячущиеся тогда проиграют.</size>",
   "HideAndSeek_MaxGameTime": "Макс. длительность игры",
-  "SubText.HideAndSeek": "Прятки",
+  "SubText.HideAndSeek": "ИЩИ И ПРЯЧЬСЯ",
   "HNS.MinNeutrals": "<#00ffff>Мин.</color> кол-во <#ffab1b>Нейтралов</color>",
   "HNS.DangerMeter": "Показывать (модовый) Измеритель Опаности",
   "HNS.MaxNeutrals": "<#0000ff>Макс.</color> кол-во <#ffab1b>Нейтралов</color>",
@@ -3470,6 +3470,7 @@
   "SeekerSpeed": "Скорость Seeker'а",
   "HiderSpeed": "Скорость Hider'а",
   "SeekerCanVent": "Искатель может прыгать в люки",
+  "BlindTime": "Время слепоты Искателей в начале",
   "Hider": "HIDER",
   "HiderInfo": "ВЫЖИВИ И ДЕЛАЙ ТАСКИ",
   "HiderInfoLong": "(Прячущиеся):\\nЦель Hider'а - выжить до конца и спастись от Искателей. Выполняя таски, Hider уменьшает время игры.",
@@ -3497,10 +3498,11 @@
   "DetectorFrequency": "Информация об искателях отображается каждые",
   "DetectorVision": "Зрение Detector'а",
   "DetectorSpeed": "Скорость Detector'а",
+  "DetectorNotify": "Местоположение Искателя: <#00ffa5>{0}</color>",
   "Jet": "JET",
   "JetInfo": "СТАНОВИСЬ СВЕРХБЫСТРЫМ И УБЕГАЙ ОТ ИСКАТЕЛЕЙ",
   "JetInfoLong": "(Прячущиеся):\\nJet может погладить питомца, чтобы активировать дэш и временно стать очень быстрым.",
-  "JetSpeed": "Скорость во время Дэша",
+  "JetSpeedIncreased": "Скорость во время Дэша",
   "JetDuration": "Длительность Дэша",
   "JetCooldown": "Откат Дэша",
   "JetVision": "Зрение Jet'а",
@@ -3508,7 +3510,7 @@
   "Dasher": "DASHER",
   "DasherInfo": "СТАНОВИСЬ СВЕРХБЫСТРЫМ И ЛОВИ ПРЯЧУЩИХСЯ",
   "DasherInfoLong": "(Искатели):\\nDasher может погладить питомца, чтобы активировать дэш и временно стать очень быстрым.",
-  "DasherSpeed": "Скорость во время Дэша",
+  "DasherSpeedIncreased": "Скорость во время Дэша",
   "DasherDuration": "Длительность Дэша",
   "DasherCooldown": "Откат Дэша",
   "DasherVision": "Зрение Dasher'а",
@@ -3517,10 +3519,11 @@
   "LocatorInfo": "НИ ОДИН ПРЯЧУЩИЙСЯ ОТ ТЕБЯ НЕ СКРОЕТСЯ",
   "LocatorInfoLong": "(Искатели):\\nLocator раз в определённое количество секунд получает стрелку на ближайшего прячущегося.",
   "LocatorDuration": "Длительность показа стрелки",
-  "LocatorCooldown": "Откат показа стрелки",
+  "LocatorFrequency": "Частота показа стрелки",
   "LocatorTargetKnows": "Прячущиеся узнают о трекинге",
   "LocatorVision": "Зрение Locator'а",
   "LocatorSpeed": "Скорость Locator'а",
+  "LocatorNotify": "Locator отслеживает тебя",
   "Venter": "VENTER",
   "VenterInfo": "ИСПОЛЬЗУЙ ЛЮКИ ДЛЯ ЛОВЛИ ПРЯЧУЩИХСЯ",
   "VenterInfoLong": "(Искатели):\\nVenter может использовать люки.",
@@ -3537,6 +3540,10 @@
   "TaskinatorCanWinAfterDeath": "Taskinator может выиграть после смерти",
   "TaskinatorVision": "Зрение Taskinator'а",
   "TaskinatorSpeed": "Скорость Taskinator'а",
+  "PlayerAlreadyMod": "Этот игрок уже является Модератором. Ничего не изменилось.",
+  "PlayerAddedToModList": "Игрок был добавлен в список Модераторов.",
+  "PlayerRemovedFromModList": "Игрок был убран из списка Модераторов.",
+  "PlayerNotMod": "Этот игрок не является Модератором. Ничего не изменилось.",
   "Goose": "Goose",
   "GooseInfo": "Взбеси всё живое!",
   "GooseInfoLong": "(Член Экипажа):\\nКак Goose, вы можете гоготать на игроков, чтобы просто раздражать их.\\nВо время гоготания вы тащите их за собой, а они не могут использовать свои способности.",
