--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -777,7 +777,7 @@
   "PickpocketInfoLong": "(Neutrals):\\nAs the Pickpocket, you steal votes from your kills.\\nThese votes are hidden.\\n\\nKill everyone to win.",
   "TraitorInfoLong": "(Neutrals):\\nAs the Traitor, you were an Impostor that betrayed the Impostors.\\nYou know the Impostors but they don't know you.\\nThe twist? They can kill you but you can't kill them.\\n\\nEliminate the Impostors by other means, then kill everyone else to win!",
   "VultureInfoLong": "(Neutrals):\\nAs the Vulture, report bodies to win!\\n\\nWhen you report a body, if your eat cooldown is up, you'll eat the body (makes it unreportable).\\nIf your eat ability is still on cooldown, then you'll report the body normally.\\n\\nAdditionally, you'll report bodies normally if the maximum bodies eaten per round is reached.",
-  "MedusaInfoLong": "(Neutrals):\\nAs the Medusa, you can stone bodies much like cleaning a body.\\nStoned bodies cannot be reported.\\n\\nKill everyone to win.",
+  "MedusaInfoLong": "(Neutrals):\\nAs the Medusa, you can stone bodies much like cleaning a body when your kill cooldown is up.\\nStoned bodies cannot be reported.\\n\\nKill everyone to win.",
   "BakerInfoLong": "(Neutrals):\\nAs the Baker, you give out bread.\\nAt the beginning of each meeting, messages will be given out.\\n\\nIf you finish your tasks, you become Famine when a meeting is called.",
   "FamineInfoLong": "(Neutrals):\\nAs the Famine, you give out poisoned bread.\\nPlayers with poisoned bread die at the end of the meeting if the Famine is not exiled.\\n\\nIf the Famine is alive at the end of the game, they steal the win.",
   "SpiritcallerInfoLong": "(Neutrals):\\nAs the Spiritcaller, your victims become Evil Spirits after they die. These spirits can help you win by freezing other players for a short time and/or blocking their vision. Alternatively, the spirits can give you a shield that protects you briefly from an attempted kill.",
@@ -2307,6 +2307,7 @@
   "InfectiousKillButtonText": "Infect",
   "MonarchKillButtonText": "Knight",
   "FarseerKillButtonText": "Reveal",
+  "PoisonerKillButtonText": "Poison",
   "SentryPetButtonText": "Monitor",
   "DisabledBySettings": "Disabled by Settings",
   "Disabled": "Disabled",
