Translating & Improving Translation

--- a/Resources/Lang/ru_RU.json
+++ b/Resources/Lang/ru_RU.json
@@ -777,7 +777,7 @@
   "PickpocketInfoLong": "(Нейтральный Убийца):\\nPickpocket ворует голоса игроков, которых он убил.",
   "TraitorInfoLong": "(Нейтральный Убийца):\\nTraitor это предатель который... предал предателей!\\nОн знает предателей, но они не знают его.\\nОднако, предатели могут убить Traitor'а, а Traitor предателей - нет.\\n\\nСначала уничтожь всех предателей, а потом убей остальных, чтобы победить!",
   "VultureInfoLong": "(Злой Нейтрал):\\nVulture, вместо репорта трупов, съедает их.\\nСъеденный труп нельзя зарепортить.\\nVulture выигрывает, после съедение указанного в настройках количества трупов.\\n\\nVulture имеет множество настроек. Если у него стоит перезарядка на съедение трупов, то до конца данной перезарядки, если Vulture попытается зарепортить труп, оно будет зарепорчено нормально, а не съедено",
-  "MedusaInfoLong": "(Нейтральный Убийца):\\nMedusa может сделать трупы невозможными к репорту.",
+  "MedusaInfoLong": "(Нейтральный Убийца):\\nMedusa может сделать трупы невозможными к репорту, если попытается их зарепортить. Делать трупы невозможными к репорту можно только когда перезарядка убийства откатилась.",
   "BakerInfoLong": "(Убийца):\\nBaker может продавать хлеб в начале каждого собрания.\\nКогда он закончит свои таски, то станет Famine после созыва собрания.",
   "FamineInfoLong": "(Убийца):\\nFamine выдаёт отравленный хлеб, вместо обычного.\\nИгроки с отравленным хлебом умирают после собрания, если Famine не выкинута на этом же собрании.\\n\\nЕсли Famine жив к моменту конца игры, он ворует победу.",
   "SpiritcallerInfoLong": "(Нейтральный Убийца):\\nТе, кого убил Spiritcaller, превращаются в Evil Spirits.\\nEvil Spirits могут ослеплять других игроков или замораживать их на определённое время (зависит от настроек). Также, Evil Spirits могут выдать Spiritcaller'у временный щит.\\nEvil Spirits взаимодействуют с игроками с помощью кнопки защиты и выигрывают вместе с Spiritcaller'ом.",
@@ -1995,7 +1995,7 @@
   "MerchantMaxSell": "Макс. кол-во атрибутов на продажу",
   "MerchantMoneyPerSell": "Сумма <color=#D27D2D>денег</color>, заработанных за продажу атрибута",
   "MerchantMoneyRequiredToBribe": "Сумма <color=#D27D2D>денег</color>, необходимая для подкупа убийцы",
-  "MerchantNotifyBribery": "Сообщить <color=#D27D2D>Merchant</color>'у, если убийца подкуплен",
+  "MerchantNotifyBribery": "Сообщить <color=#D27D2D>Merchant</color>'у, что убийца подкуплен",
   "MerchantTargetCrew": "Может продавать атрибуты <color=#8cffff>Членам Экипажа</color>",
   "MerchantTargetImpostor": "Может продавать атрибуты <color=#ff1919>Предателям</color>",
   "MerchantTargetNeutral": "Может продавать атрибуты <color=#ffab1b>Нейтралам</color>",
@@ -2308,6 +2308,7 @@
   "MonarchKillButtonText": "Посвятить",
   "FarseerKillButtonText": "Раскрыть",
   "SentryPetButtonText": "Сенсор",
+  "PoisonerKillButtonText": "Отравить"
   "DisabledBySettings": "Выключено настройками",
   "Disabled": "Выключено",
   "FailToTrack": "Не удалось отследить",
@@ -2378,7 +2379,7 @@
   "EAC.CheatDetected.LowLevel": "Предупреждение: EAC обнаружил низкий уровень читов. Один из игроков читерит.",
   "DisableVoteBan": "Отключить сапог-кик для всех, кроме хоста (не даёт читерам всех кикнуть)",
   "PlayerIsRole": "{0} был {1}.",
-  "PlayerExiled": "{0} был выброшен...",
+  "PlayerExiled": "{0} был выкинут...",
   "ExiledJester": "{1} {0} не был предателем...\\nНу вы даёте, как можно было повестись на такое\\nGG!",
   "ExiledExeTarget": "Конечно, {0} был {1}\\nНо ведь от этого он не прекратил быть целью <color=#611c3a>Executioner</color>'а!\\nGG!",
   "ExiledInnocentTargetAddBelow": "\\nХм, что-то тут не так\\nТочно! Вы выкинули цель <color=#8f815e>Innocent</color>'а!",
@@ -2652,6 +2653,7 @@
   "Prefix.Dynamo": "Dynamo",
   "Dynamo.IncreaseSpeedBy": "Увеличивать скорость на",
   "Dynamo.IncreaseSpeedFrequency": "Увеличивать скорость каждые",
+  "Dynamo.MaxSpeed": "Максимальная скорость",
   "Samurai": "Samurai",
   "SamuraiInfo": "Убивай игроков разными путями",
   "SamuraiInfoLong": "(Нейтральный Убийца):\\nКак Samurai, вы можете делать задерживающиеся и обычные убийства. Если вы нажмёте на кнопку убийства рядом с кем-то (убийство сразу не произойдёт) и постоите с ним рядом несколько секунд (как будто Arsonist обливает), то произойдёт задержанное убийство (т.е. игрок умрёт через несколько секунд), а также ваш откат убийства на следующий раз будет уменьшен. Если же вы отойдёте раньше, то произойдёт обычное убийство.",
@@ -3263,7 +3265,7 @@
   "CandleLighterEndVisionTime": "Время на конец изменения зрения",
   "CandleLighterEndVision": "Минимальное зрение",
   "CandleLighterTimeMoveMeeting": "Время течёт во время собраний",
-  "CandleLighterTasksFinishedVision": "Зрение после выполнения всех собраний",
+  "CandleLighterTasksFinishedVision": "Зрение после выполнения всех тасков",
   "AprilFoolsMode": "Первоапрельский режим",
   "SilenceMode": "Метод замалчивания",
   "Adventurer": "Adventurer",
@@ -3991,8 +3993,8 @@
   "VultureChangeRoleWhenCantWin": "Изменить роль, если победа невозможна",
   "VultureChangeRole": "Изменить роль на",
   "ImpCanBeRole": "<color=#ff1919>Предатели</color> могут стать {role}",
-  "CrewCanBeRole": "<color=#8cffff>Crewmates</color> могут стать {role}",
-  "NeutralCanBeRole": "<color=#ffab1b>Neutrals</color> могут стать {role}",
+  "CrewCanBeRole": "<color=#8cffff>Члены Экипажа</color> могут стать {role}",
+  "NeutralCanBeRole": "<color=#ffab1b>Нейтралы</color> могут стать {role}",
   "PirateTryHideMsg": "<color=#EDC240>Спрятать команду /duel</color>",
   "SuccessfulDuelsToWin": "Кол-во дуэлей для победы",
   "PirateMeetingMsg": "Дуэлься со своей целью.\\n\\n Команда для дуэля:-\\n⦿ /duel 0 (чтобы выбрать камень)\\n⦿ /duel 1 (чтобы выбрать бумагу)\\n⦿ /duel 2 (чтобы выбрать ножницы)\\n\\nВы выиграете, если выберете то же, что и ваша цель.",
