Bug fixes.... yeah that's it

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3462,6 +3462,7 @@
   "HNS.MinNeutrals": "<#00ffff>Minimum</color> Number of <#ffab1b>Neutrals</color>",
   "HNS.MaxNeutrals": "<#0000ff>Maximum</color> Number of <#ffab1b>Neutrals</color>",
   "HNS.DangerMeter": "Show (Custom) Danger Meter",
+  "HNS.PlayersSeeRoles": "Players See Each Others' Roles",
   "SubText.HideAndSeek": "Hide And Seek",
   "TimeLeft": "Time Left",
   "MinutesLeft": "{0} <color=#00ffa5>Minutes Left</color>",
