I can't even count how many things I just fixed

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1047,6 +1047,11 @@
   "TieMode.Default": "No ejects",
   "TieMode.All": "Eject All",
   "TieMode.Random": "Eject Random",
+  "Kill": "Kill",
+  "Report": "Report",
+  "Sabotage": "Sabotage",
+  "Vent": "Vent",
+  "Dead": "DEAD",
   "DisableDevices": "Disable Devices",
   "DisableSkeldDevices": "Disable Skeld Devices",
   "DisableMiraHQDevices": "Disable MiraHQ Devices",
@@ -1573,7 +1578,9 @@
   "HackDuration": "Hack Duration",
   "MimicCooldown": "Mimic Cooldown",
   "MimicDuration": "Mimic Duration",
-  "HackedByGlitch": "<color=#ffff00>You are hacked, you can't {0}.</color>",
+  "RoleBlockNotify": "You are role blocked, you can't {0}",
+  "RoleBlockDuration": "Role Block Duration",
+  "RoleBlockCooldown": "Role Block Cooldown",
   "BKProtectDuration": "Protection Duration",
   "TotocalcioMaxBetTimes": "Maximum Number of Follows",
   "TotocalcioBetCooldown": "Follow Cooldown",
@@ -2124,7 +2131,6 @@
   "TabGroup.Addons": "Add-Ons",
   "TabGroup.OtherRoles": "Ghost Roles",
   "TabGroup.TaskSettings": "Game Modifiers",
-  "TabGroup.CovenRoles": "Coven Roles",
   "OtherRoles.CrewmateRoles": "★ Crewmate Roles",
   "OtherRoles.NeutralRoles": "★ Neutral Roles",
   "OtherRoles.ImpostorRoles": "★ Impostor Roles",
@@ -2309,6 +2315,8 @@
   "FarseerKillButtonText": "Reveal",
   "PoisonerKillButtonText": "Poison",
   "SentryPetButtonText": "Monitor",
+  "SabotageActiveIndicator": "▶",
+  "SabotageDisabledIndicator": "⊘",
   "DisabledBySettings": "Disabled by Settings",
   "Disabled": "Disabled",
   "FailToTrack": "Failed To Track",
@@ -2797,7 +2805,6 @@
   "Escort": "Escort",
   "EscortInfo": "Role-Block Players to Help the Crew!",
   "EscortInfoLong": "(Crewmates):\\nAs the Escort, you can role-block a player for a specified time using your kill button. A role-blocked player cannot kill, vent, sabotage or report.\\n(Role-Block duration is the same as the hack duration for The Glitch)",
-  "EscortCD": "Role-Block Cooldown",
   "EscortBlockDuration": "Role-Block Duration",
   "EscortTargetHacked": "Target successfully role-blocked",
   "EscortKillButtonText": "Role-Block",
