--- a/Resources/Lang/ru_RU.json
+++ b/Resources/Lang/ru_RU.json
@@ -2308,7 +2308,7 @@
   "MonarchKillButtonText": "Посвятить",
   "FarseerKillButtonText": "Раскрыть",
   "SentryPetButtonText": "Сенсор",
-  "PoisonerKillButtonText": "Отравить"
+  "PoisonerKillButtonText": "Отравить",
   "DisabledBySettings": "Выключено настройками",
   "Disabled": "Выключено",
   "FailToTrack": "Не удалось отследить",
