Translating & Improving Translation

--- a/Resources/Lang/ru_RU.json
+++ b/Resources/Lang/ru_RU.json
@@ -465,7 +465,7 @@
   "DoctorInfo": "Ты знаешь причины смерти игроков",
   "DictatorInfo": "Выгони того, кого считаешь нужным",
   "DetectiveInfo": "Узнавай больше информации о зарепорченных трупах",
-  "UndercoverInfo": "Предатели видят тебя, как своего тиммейта",
+  "UndercoverInfo": "Предатели видят тебя как своего тиммейта",
   "SwordsManInfo": "Ты можешь убить только 1 любого игрока",
   "NiceGuesserInfo": "Угадывай <color=#ff1919>злые</color> роли на собраниях",
   "TransporterInfo": "Выполняй таски, меняя двух игроков местами",
@@ -862,7 +862,7 @@
   "RandomMapsMode": "Рандомные карты",
   "SyncedButtonCount": "Максимальное количество собраний",
   "AddedTheSkeld": "Включить <color=#66a186>The Skeld</color>",
-  "AddedMIRAHQ": "Включить <color=#e84b56>MIRA HQ</color>",
+  "AddedMiraHQ": "Включить <color=#e84b56>Mira HQ</color>",
   "AddedPolus": "Включить <color=#a167c0>Polus</color>",
   "DontUpdateDeadPlayers": "Не обновлять мёртвых для улучшения производительности",
   "AddedTheAirship": "Включить <color=#ed0007>Airship</color>",
@@ -1023,8 +1023,8 @@
   "AllClosed": "Закрыть всё",
   "AllOpen": "Открыть всё",
   "RandomByDoor": "Рандомно",
-  "ChangeDecontaminationTime": "Изменить время обеззараживания (<color=#e84b56>MIRA HQ</color>/<color=#a167c0>Polus</color>)",
-  "DecontaminationTimeOnMiraHQ": "Время обеззараживания на <color=#e84b56>MIRA HQ</color>",
+  "ChangeDecontaminationTime": "Изменить время обеззараживания (<color=#e84b56>Mira HQ</color>/<color=#a167c0>Polus</color>)",
+  "DecontaminationTimeOnMiraHQ": "Время обеззараживания на <color=#e84b56>Mira HQ</color>",
   "DecontaminationTimeOnPolus": "Время обеззараживания на <color=#a167c0>Polus</color>",
   "KickAndroidPlayer": "Кикнуть игроков с телефонов",
   "ShareLobby": "Отправлять код вашей комнаты в ДС сервер EHR",
@@ -1047,9 +1047,14 @@
   "TieMode.Default": "Ничего",
   "TieMode.All": "Выкинуть всех",
   "TieMode.Random": "Выкинуть рандомно",
+  "Kill": "убивать",
+  "Report": "репортить",
+  "Sabotage": "саботировать",
+  "Vent": "прыгать в люки",
+  "Dead": "МЁРТВ",
   "DisableDevices": "Выключить устройства",
   "DisableSkeldDevices": "Выключить устройства на <color=#66a186>The Skeld</color>",
-  "DisableMiraHQDevices": "Выключить устройства на <color=#e84b56>MIRA HQ</color>",
+  "DisableMiraHQDevices": "Выключить устройства на <color=#e84b56>Mira HQ</color>",
   "DisablePolusDevices": "Выключить устройства на <color=#a167c0>Polus</color>",
   "DisableAirshipDevices": "Выключить устройства на <color=#ed0007>Airship</color>",
   "DisableFungleDevices": "Выключить устройства на <color=#ffa646>Fungle</color>",
@@ -1263,7 +1268,7 @@
   "SabotageMasterFixesDoors": "Может открыть все двери одной комнаты",
   "SabotageMasterFixesReactors": "Может починить реактор в одиночку",
   "SabotageMasterFixesOxygens": "Может починить о2 в одиночку",
-  "SabotageMasterFixesCommunications": "Может починить связь (<color=#e84b56>MIRA HQ</color>/<color=#ffa646>Fungle</color>) в одиночку",
+  "SabotageMasterFixesCommunications": "Может починить связь (<color=#e84b56>Mira HQ</color>/<color=#ffa646>Fungle</color>) в одиночку",
   "SabotageMasterFixesElectrical": "Может починить свет одним кликом",
   "SMUsesUsedWhenFixingReactorOrO2": "Способностей затрачивается на починку реактора/о2",
   "SMUsesUsedWhenFixingLightsOrComms": "Способностей затрачивается на починку света/связи",
@@ -1573,7 +1578,9 @@
   "HackDuration": "Длительность Взлома",
   "MimicCooldown": "Откат Имитации",
   "MimicDuration": "Длительность Имитации",
-  "HackedByGlitch": "<color=#ffff00>Тебя взломал The Glitch, делать этого</color>",
+  "RoleBlockNotify": "Кто-то заблокировал вашу роль. Вы не можете {0}",
+  "RoleBlockDuration": "Длительность блокировки",
+  "RoleBlockCooldown": "Откат блокировки",
   "BKProtectDuration": "Длительность щита",
   "TotocalcioMaxBetTimes": "Макс. кол-во следований",
   "TotocalcioBetCooldown": "Откат следования",
@@ -1799,8 +1806,8 @@
   "PolusReactorTimeLimit": "Время саботажа реактора на <color=#a167c0>Polus</color>",
   "SkeldO2TimeLimit": "Время саботажа о2 на <color=#66a186>The Skeld</color>",
   "SkeldReactorTimeLimit": "Время саботажа реактора на <color=#66a186>The Skeld</color>",
-  "MiraO2TimeLimit": "Время саботажа о2 на <color=#e84b56>MIRA HQ</color>",
-  "MiraReactorTimeLimit": "Время саботажа реактора на <color=#e84b56>MIRA HQ</color>",
+  "MiraO2TimeLimit": "Время саботажа о2 на <color=#e84b56>Mira HQ</color>",
+  "MiraReactorTimeLimit": "Время саботажа реактора на <color=#e84b56>Mira HQ</color>",
   "FungleMushroomMixupDuration": "Время ''Грибного Переполоха'' на <color=#ffa646>Fungle</color>",
   "FungleReactorTimeLimit": "Время саботажа реактора на <color=#ffa646>Fungle</color>",
   "AirshipReactorTimeLimit": "Время саботажа реактора на <color=#ed0007>Airship</color>",
@@ -2124,7 +2131,6 @@
   "TabGroup.Addons": "Атрибуты",
   "TabGroup.OtherRoles": "Роли Призраков",
   "TabGroup.TaskSettings": "Модификации Игры",
-  "TabGroup.CovenRoles": "Роли Ковенов",
   "OtherRoles.CrewmateRoles": "★ Роли Членов Экипажа",
   "OtherRoles.NeutralRoles": "★ Роли Нейтралов",
   "OtherRoles.ImpostorRoles": "★ Роли Предателей",
@@ -2309,6 +2315,8 @@
   "FarseerKillButtonText": "Раскрыть",
   "SentryPetButtonText": "Сенсор",
   "PoisonerKillButtonText": "Отравить",
+  "SabotageActiveIndicator": "▶",
+  "SabotageDisabledIndicator": "⊘",
   "DisabledBySettings": "Выключено настройками",
   "Disabled": "Выключено",
   "FailToTrack": "Не удалось отследить",
@@ -2395,7 +2403,7 @@
   "BelongTo": "{0} - {1}",
   "GG": "GG! Все убийцы мертвы. <color=#8cffff>Члены Экипажа</color> победили!",
   "IWonderWhatsLeft": "<color=#ff1919>Предатели</color> мертвы, но <color=#ffab1b>Нейтралы</color> возможно остались.",
-  "SubText.Bloodlust": "Но есть нюанс...",
+  "SubText.Bloodlust": "Однако есть один нюанс...",
   "GameOverReason.HumansByVote": "<color=#8cffff>Все <color=#ff1919>Предатели </color></color> и <color=#ffab1b>Нейтральные Убийцы</color> выкинуты или убиты</color>",
   "GameOverReason.HumansDisconnect": "<color=#777777>Члены Экипажа отключились</color>",
   "GameOverReason.ImpostorByKill": "<color=#ff1919>Предатели убили всех</color>",
@@ -2450,7 +2458,7 @@
   "BardChance": "Шанс появления <color=#ff1919>Bard</color>'а",
   "NukerChance": "Шанс появления <color=#ff1919>Nuker</color>'а",
   "SkeldChance": "Шанс на <color=#66a186>The Skeld</color>",
-  "MiraChance": "Шанс на <color=#e84b56>MIRA HQ</color>",
+  "MiraChance": "Шанс на <color=#e84b56>Mira HQ</color>",
   "PolusChance": "Шанс на <color=#a167c0>Polus</color>",
   "DleksChance": "Шанс на <color=#66a186>dlekS ehT</color>",
   "AirshipChance": "Шанс на <color=#ed0007>Airship</color>",
@@ -2460,7 +2468,7 @@
   "CamouflageMode.Karpe": "<color=#04d5e0>KARPED1EM</color>",
   "CamouflageMode.Lauryn": "<color=#e866d7>Lauryn</color>",
   "CamouflageMode.Moe": "<color=#ed3f09>Moe</color>",
-  "CamouflageMode.Pyro": "<color=#04cf99Pyro</color>",
+  "CamouflageMode.Pyro": "<color=#04cf99>Pyro</color>",
   "CamouflageMode.ryuk": "<color=#9e2424>ryuk</color>",
   "CamouflageMode.Gurge44": "<color=#E9F7FF>Gurge44</color>",
   "CamouflageMode.TommyXL": "<color=#EC7578>TommyXL</color>",
@@ -2797,7 +2805,6 @@
   "Escort": "Escort",
   "EscortInfo": "Блокируй роли игроков и спаси <color=#8cffff>Экипаж</color>!",
   "EscortInfoLong": "(Член Экипажа):\\nEscort может блокировать роли игроков на определённое время с помощью кнопки убийства. Блокированный игрок не может убивать, использовать люки, саботировать или репортить.\\n(Длительность блокирования равна длительности взлома у The Glitch'а)",
-  "EscortCD": "Откат блокирования",
   "EscortBlockDuration": "Длительность блокирования",
   "EscortTargetHacked": "Роль игрока заблокирована",
   "EscortKillButtonText": "Блок",
@@ -3459,10 +3466,11 @@
   "ModeHideAndSeek": "Режим: Прятки",
   "ModeDescribe.HideAndSeek": "В режиме ''Прятки'' один или несколько из игроков - искатели, а другие - прячущиеся.\\nКогда таймер дойдёт до 0, прячущиеся выиграют. Чтобы приблизить конец игры, прячущиеся должны выполнять таски\\n\\n<b><u>Дополнительные роли:</u></b>\\n\\n<#00ff00><b>Fox</b></color>:\\n<size=70%>Побеждает, если доживёт до конца.</size>\\n\\n<#ff00ff><b>Troll</b></color>:\\n<size=70%>Побеждает, если умрёт. Искатели и прячущиеся тогда проиграют.</size>",
   "HideAndSeek_MaxGameTime": "Макс. длительность игры",
-  "SubText.HideAndSeek": "ИЩИ ИЛИ ПРЯЧЬСЯ",
   "HNS.MinNeutrals": "<#00ffff>Мин.</color> кол-во <#ffab1b>Нейтралов</color>",
-  "HNS.DangerMeter": "Показывать (Модовый) Измеритель Опасности",
   "HNS.MaxNeutrals": "<#0000ff>Макс.</color> кол-во <#ffab1b>Нейтралов</color>",
+  "HNS.DangerMeter": "Показывать (Модовый) Измеритель Опасности",
+  "HNS.PlayersSeeRoles": "Игроки видят роли друг друга",
+  "SubText.HideAndSeek": "ИЩИ ИЛИ ПРЯЧЬСЯ",
   "TimeLeft": "Осталось времени",
   "MinutesLeft": "{0} <color=#00ffa5>Минут осталось</color>",
   "TimeDecreased": "Время уменьшено",
@@ -3726,7 +3734,7 @@
   "Bloodmoon.Speed": "Скорость <#ff1919>Bloodmoon</color>'а",
   "Prefix.Bloodmoon": "Bloodmoon",
   "HaunterInfo": "Ты - худший кошмар Убийц...",
-  "HaunterInfoLong": "(Призрак Члена Экипажа):\\nКак Haunter, когда вы выполните все таски, 1 или несколько* убийц* будут раскрыты на собрании. Когда вам осталось выполнить всего несколько* тасков, все убийцы* получат на вас стрелку. Если любой из убийц со стрелкой пройдёт к вам слишком быстро, вы потеряете свою роль.\\nHaunter'ом становится первый умерший Член Экипажа.\\n\\n<size=80%>*Все значения настраиваются. Haunter может раскрывать только предателей, раскрывать только 1 или больше, а убийцы получать на него стрелку за несколько тасков, а не за 1.</size>",
+  "HaunterInfoLong": "(Призрак Члена Экипажа):\\nКак Haunter, когда вы выполните все таски, 1 или несколько* убийц* будут раскрыты на собрании. Когда вам осталось выполнить всего несколько* тасков, все убийцы* получат на вас стрелку. Если любой из убийц со стрелкой пройдёт около вас слишком близко, вы потеряете свою роль.\\nHaunter'ом становится первый умерший Член Экипажа или Нейтрал.\\n\\n<size=80%>*Все значения настраиваются. Haunter может раскрывать только предателей, раскрывать только 1 или больше, а убийцы получать на него стрелку за несколько тасков, а не за 1.</size>",
   "Haunter1TaskLeft": "<#ffff00>Haunter почти выполнил все таски! Идите по стрелке и остановите его</color>!",
   "HaunterRevealedYou": "Твоя роль была раскрыта Haunter'ом!",
   "HaunterFinishedTasks": "Haunter выполнил все таски и раскрыл убийц(-у)!",
