Add Patroller; Optimize (By: Gurge44 - Ported from TOHEN)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1173,6 +1173,7 @@
   "Cooldown": "Cooldown",
   "CurseCooldown": "Curse Cooldown",
   "FreezeAfterCurseKill": "Freeze After Killing via Cursed Player",
+  "DecreasedKillCooldown": "Decreased Kill Cooldown",
   "KillCooldown": "Kill Cooldown",
   "VentCooldown": "Vent Cooldown",
   "MaxInVentTime": "Max In-Vent Time",
@@ -3134,6 +3135,16 @@
   "GamblerGet.Freeze": "<color=#ffffff><color=#ffa500>Effect:</color> Freeze (for <color=#ffa500>{0}s</color>)</color>",
   "GamblerGet.LowVision": "<color=#ffffff><color=#ffa500>Effect:</color> Lower Vision (<color=#ffa500>{1}x</color>, for <color=#ffa500>{0}s</color>)</color>",
   "GamblerGet.HighKCD": "<color=#ffffff><color=#ffa500>Effect:</color> Higher Kill Cooldown (<color=#ffa500>{0}s</color>)</color>",
+  "Patroller": "Patroller",
+  "PatrollerInfo": "Have Different Boosts in Each Room",
+  "PatrollerInfoLong": "(Neutrals):\\nAs the Patroller, you have different boosts in each room.\\nAt the start of the game, it gets randomly rolled which boosts you get in which room.\\nKill everyone to win!\\n\\nYou can see your boosts by petting your pet if the setting to use them is on.",
+  "PatrollerNotify": "You are now in <color=#00ffa5>{0}</color>\\nIn this room, {1}",
+  "PatrollerBoost.Speed": "you have <color=#00ffa5>higher speed</color>",
+  "PatrollerBoost.Vision": "you have <color=#00ffa5>higher vision</color>",
+  "PatrollerBoost.Cooldown": "you have <color=#00ffa5>lower kill cooldown</color>",
+  "PatrollerBoost.Vent": "<color=#00ffa5>you can vent</color>",
+  "PatrollerBoost.Range": "you have <color=#00ffa5>higher kill range</color>",
+  "PatrollerBoost.Sabotage": "<color=#00ffa5>you can sabotage</color>",
   "Hitman": "Hitman",
   "HitmanInfo": "Select your target",
   "HitmanInfoLong": "(Impostors):\\nAs the Hitman, you may shapeshift into someone to mark them as your target. If you kill your target, your next kill cooldown will be lower.\\n\\nNote: Once you chose a target, you cannot change it. You'll get a chance to mark a target again after killing your current target.",
