--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3137,7 +3137,8 @@
   "GamblerGet.HighKCD": "<color=#ffffff><color=#ffa500>Effect:</color> Higher Kill Cooldown (<color=#ffa500>{0}s</color>)</color>",
   "Patroller": "Patroller",
   "PatrollerInfo": "Have Different Boosts in Each Room",
-  "PatrollerInfoLong": "(Neutrals):\\nAs the Patroller, you have different boosts in each room.\\nAt the start of the game, it gets randomly rolled which boosts you get in which room.\\nKill everyone to win!\\n\\nYou can see your boosts by petting your pet if the setting to use them is on.",
+  "PatrollerInfoLong": "(Neutrals):\\nAs the Patroller, you have different boosts in each room.\\nAt the start of the game, it gets randomly rolled which boosts you get in which room.\\nAdditionally, you can vent freely from any room once per round.\\nKill everyone to win!\\n\\nYou can see your boosts by petting your pet if the setting to use them is on.",
+  "PatrollerNotifyNoBoost": "You are now in <color=#00ffa5>{0}</color>\\nIn this room, you have <#ff0000>no boosts</color>",
   "PatrollerNotify": "You are now in <color=#00ffa5>{0}</color>\\nIn this room, {1}",
   "PatrollerBoost.Speed": "you have <color=#00ffa5>higher speed</color>",
   "PatrollerBoost.Vision": "you have <color=#00ffa5>higher vision</color>",
